# fast-template-sql

./: .gitignore  README.md  alembic.ini  app.py  pyproject.toml
service/: database.py  logging_config.py  settings.py
tests/: testconfig.py
