[tool.poetry]
name = "fast-template"
version = "0.1.0"
description = ""
authors = ["Ryan Jones <ryan.jones26@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_template"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
requests = "^2.28.2"
SQLAlchemy = "^2.0.8"
python-dotenv = "^1.0.0"
FastAPI-SQLAlchemy = "^0.2.1"
alembic = "^1.10.2"
psycopg2 = "^2.9.6"
email-validator = "^1.3.1"
passlib = "^1.7.4"
asyncpg = "^0.27.0"
opentelemetry-instrumentation-fastapi = "^0.38b0"
opentelemetry-distro = "^0.38b0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
